# hexapod-biomechanics

./: .gitignore  main.py  pyproject.toml
src/: forces.py  kinematics.py  load_data.py  utils.py  visualize.py
src/hexapod_biomechanics/: forces.py  inverse_dynamics.py  kinematics.py  load_data.py  utils.py  visualize.py
